# remblais

./: .gitignore  LICENSE  README.md  demo.ipynb  flake.nix  pyproject.toml
src/: __init__.py  cli.py  morph.py  ops.py  render.py
src/remblais/: io.py  plan.py
tests/: test_remblais.py
