[project]
name = "remblais"
version = "0.1.0"
description = "Local image morphing from entropic optimal transport plans"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Paul Kronlund-Drouault" }]
dependencies = [
  "imageio>=2.37",
  "imageio-ffmpeg>=0.6",
  "numpy>=2.0",
  "pillow>=10.0",
  "tinygrad>=0.10",
]

[project.scripts]
remblais = "remblais.cli:main"

[dependency-groups]
dev = [
  "ipython>=9.0",
  "matplotlib>=3.10",
  "nbformat>=5.10",
  "pytest>=8.3",
  "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remblais"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
